using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationStrings : MonoBehaviour
{
    internal static string isOnWall = "isOnWall";
    internal static string isMoving = "isMoving";
    
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jumpTrigger = "jump";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string attackTrigger = "attack";
    internal static string canMove = "canMove";
    internal static string hasTarget = "hasTarget";

    internal static string isAlive = "isAlive";
   
    internal static string hitTrigger = "hit";
    internal static string lockVelocity = "lockVelocity";
    internal static string attackCooldown = "attackCooldown";
    internal static string rangedAttackTrigger = "rangedAttack";

    internal static string roll = "roll";
    internal static string defend="defend";
    internal static string rainOfArrowsTrigger="attack3";
    internal static string fireBowTrigger="attack2";
    internal static string spLazeTrigger="sp_atk";
    internal static string spellCooldown="spellCooldown";
    internal static string slide="slide";
    internal static string shootTrigger="shoot";
    internal static string castTrigger = "cast";
    internal static string intro="intro";
    internal static string freeze="idle";
    internal static string UnlockedLevel= "UnlockedLevel";
    internal static string ReachedIndex= "ReachedIndex";
}
